--- a/src/package.json
+++ b/src/package.json
@@ -39,6 +39,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "sharp": "^0.21.3",
     "validator": "^10.11.0"
   }
 }
