--- a/src/package.json
+++ b/src/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^5.4.10",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "node-fetch": "^2.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
