--- a/src/package.json
+++ b/src/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "binary-parser": "^1.3.2",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.2",
     "cors": "^2.8.5",
