--- a/src/package.json
+++ b/src/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "jpeg-js": "^0.3.5",
     "jwt-simple": "^0.5.5",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.10",
@@ -41,6 +42,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pixelmatch": "^5.0.2",
+    "pngjs": "^3.4.0",
     "sharp": "^0.22.1",
     "validator": "^11.0.0"
   }
