--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "export NODE_ENV=\"development\" && node index.js",
+    "win-start": "set NODE_ENV=\"development\" && node index.js",
     "start-watch": "export NODE_ENV=\"development\" && nodemon index.js",
+    "win-start-watch": "set NODE_ENV=\"development\" && nodemon index.js",
     "local-watch": "export NODE_ENV=\"local\" && nodemon index.js",
     "test": "export NODE_ENV=\"test\" NODE_TLS_REJECT_UNAUTHORIZED=\"0\" && mocha ./**/*.test.js",
     "test-watch": "nodemon --exec 'yarn test'",
